# TCLM

./: .gitignore  CMakeLists.txt  README.md  tclmd.service
debian/: changelog  control  copyright  rules  tclm-manager.install  tclmd.install
include/: tclm_client.hpp  tclm_client_exceptions.hpp
src/: CMakeLists.txt  Communications_Manager.cpp  Communications_Manager.h  Connection.cpp  Connection.h  TCP_Connection.cpp  TCP_Connection.h  backend_operation_defines.h  contracts.md  errno_exception.cpp  errno_exception.h  message_utils.h  messages.h  polled_eventfd.cpp  polled_eventfd.h  polled_fd.cpp  polled_fd.h  ringbuffer.cpp  ringbuffer.h  stream.c  stream.h  tclm_config.h.in
src/client/: Access_Concentrator.cpp  Access_Concentrator.h  CMakeLists.txt  Lock_impl.cpp  Lock_impl.h  Process_impl.cpp  Process_impl.h  acquire_lock_request.cpp  acquire_lock_request.h  create_lock_request.cpp  create_lock_request.h  register_process_request.cpp  register_process_request.h  release_lock_request.cpp  release_lock_request.h  request.cpp  request.h  tclm_client.cpp  tclm_client_exceptions.cpp  tclmc_impl.cpp  tclmc_impl.h  unregister_process_request.cpp  unregister_process_request.h
src/client/example/: CMakeLists.txt  main.cpp
src/client/python/: CMakeLists.txt  tclm_python_client.cpp
src/manager/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  main.cpp
src/server/: CMakeLists.txt  Lock.cpp  Lock.h  Lock_Forest.cpp  Lock_Forest.h  Lock_Request.cpp  Lock_Request.h  Process.cpp  Process.h  Process_map.cpp  Process_map.h  TCP_Listener.cpp  TCP_Listener.h  backend.cpp  backend.h  backend_exceptions.cpp  backend_exceptions.h  daemon.cpp  daemon.h  main.cpp
