cmake_minimum_required(VERSION 3.1)

project(TCLM C CXX)

set (TCLM_VERSION_MAJOR 1)
set (TCLM_VERSION_MINOR 0)
set (TCLM_VERSION_PATCH 1)

set (SERVER_VERSION_MAJOR ${TCLM_VERSION_MAJOR})
set (SERVER_VERSION_MINOR ${TCLM_VERSION_MINOR})
set (SERVER_VERSION_PATCH ${TCLM_VERSION_PATCH})

set (CLIENT_VERSION_MAJOR ${TCLM_VERSION_MAJOR})
set (CLIENT_VERSION_MINOR ${TCLM_VERSION_MINOR})
set (CLIENT_VERSION_PATCH ${TCLM_VERSION_PATCH})

# Find packages
set (THREADS_PREFER_PTHREAD_FLAG ON)
find_package (Threads REQUIRED)

find_package (PythonLibs 3 REQUIRED)
find_package (Boost REQUIRED COMPONENTS python3)

# Set CXXFLAGS
set (CMAKE_CXX_FLAGS "-O2 -std=c++17 -Wall -gdwarf-2")
set (CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -Werror")

include_directories (src)
include_directories (include)

# Add subdirectories
add_subdirectory (src)

# Packaging
set (CPACK_SOURCE_VERSION_MAJOR ${TCLM_VERSION_MAJOR})
set (CPACK_SOURCE_VERSION_MINOR ${TCLM_VERSION_MINOR})
set (CPACK_SOURCE_VERSION_PATCH ${TCLM_VERSION_PATCH})
set (CPACK_SOURCE_GENERATOR "TGZ")
set (CPACK_SOURCE_IGNORE_FILES "/build;/.git;${CPACK_SOURCE_IGNORE_FILES}")
set (CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CPACK_SOURCE_VERSION_MAJOR}.${CPACK_SOURCE_VERSION_MINOR}.${CPACK_SOURCE_VERSION_PATCH}")
include(CPack)
